--- a/proyecto/productos.html
+++ b/proyecto/productos.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><button onclick="window.location.href='index.html'">Inicio</button></li>
                 <li><button onclick="window.location.href='registro.html'">Registrar Producto</button></li>
-                <li><button onclick="window.location.href='buscador.html'">Buscar Producto</button></li>
+                <li><button onclick="window.location.href='buscar.html'">Buscar Producto</button></li>
             </ul>
         </nav>
         <h1>Lista de Productos</h1>
