--- a/proyecto/productos.html
+++ b/proyecto/productos.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - ByteFix</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
 <body>
     <header>
-        <nav>
+    <nav class="navegacion-derecha">
             <ul>
-                <li><button onclick="window.location.href='index.html'">Inicio</button></li>
-                <li><button onclick="window.location.href='registro.html'">Registrar Producto</button></li>
-                <li><button onclick="window.location.href='buscar.html'">Buscar Producto</button></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="registro.html">Registrar Producto</a></li>
+                <li><a href="buscar.html">Buscar Producto</a></li>
             </ul>
         </nav>
+
         <h1>Lista de Productos</h1>
     </header>
 
