--- a/proyecto/buscar.html
+++ b/proyecto/buscar.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Buscador de Productos - ByteFix</title>
+  <link rel="icon" type="image/png" href="../img/icon.png"> <!--Icono de pestaña navegador-->
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -11,8 +12,10 @@
   <header>
     <nav class="navegacion-derecha">
       <ul>
-        <li><a href="productos.html">Ver Productos</a></li>
         <li><a href="index.html">Inicio</a></li>
+        <li><a href="productos.html">Ver Productos</a></li>
+        <li><a href="registro.html">Registrar Producto</a></li>
+        
       </ul>
     </nav>
     <h1>Buscador de Productos</h1>
