--- a/proyecto/productos.html
+++ b/proyecto/productos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - ByteFix</title>
-    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="icon" type="image/png" href="../img/icon.png"> <!--Icono de pestaña navegador-->
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
