--- a/proyecto/registro.html
+++ b/proyecto/registro.html
@@ -58,7 +58,7 @@
 
         <div>
           <label for="imagen">Ruta de imagen (opcional):</label>
-          <input type="text" id="imagen" placeholder="Ruta de imagen (opcional)" value="/img/sinIMG.png">
+          <input type="text" id="imagen" placeholder="Ruta de imagen (opcional)" value="/img/Product/sinIMG.png">
         </div>
         
         <button type="submit">Registrar Producto</button>
