--- a/proyecto/registro.html
+++ b/proyecto/registro.html
@@ -34,7 +34,14 @@
 
         <div>
           <label for="categoria">Categoría:</label>
-          <input type="text" id="categoria" placeholder="Categoría" >
+  <select id="categoria" required>
+    <option value="">Selecciona una categoría</option>
+    <option value="Instrumentación">Instrumentación</option>
+    <option value="Herramientas de Reparación">Herramientas de Reparación</option>
+    <option value="Seguridad">Seguridad</option>
+    <option value="Componentes">Componentes</option>
+    <option value="Consumibles">Consumibles</option>
+  </select>
         </div>
         
         <div>
