--- a/proyecto/registro.html
+++ b/proyecto/registro.html
@@ -29,7 +29,7 @@
       <form id="formulario-producto">
         <div>
           <label for="nombre">Nombre del producto:</label>
-          <input type="text" id="nombre" placeholder="Nombre del producto" >
+          <input type="text" id="nombre" placeholder="Nombre del producto" maxlength="20" >
         </div>
 
         <div>
