--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -11,6 +11,7 @@
 
   <header>
     <div class="encabezado-contenido">
+      <!-- <img src="/img/icon.png" width="100"> -->
       <h1>Bienvenido a ByteFix</h1>
       <p>Somos expertos en reparación de productos industriales.</p>
     </div>
